--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script src="node_modules/leaflet/dist/leaflet-src.js"></script>
+	<script src="node_modules/d3/d3.min.js"></script>
+	<script src="node_modules/lodash/lodash.js"></script>
+	<script src="node_modules/rbush/rbush.js"></script>
 	<style>
 		html, body, #map { margin: 0; height: 100%; width: 100%; }
 	</style>
 </head>
 <body>
 	<div id="map"></div>
-	<script src="src/index.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
