--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script src="node_modules/d3/d3.min.js"></script>
 	<script src="node_modules/lodash/lodash.js"></script>
 	<script src="node_modules/rbush/rbush.js"></script>
+	<script src="src/CensusTract.js"></script>
+	<script src="src/CensusRegistry.js"></script>
 	<style>
 		html, body, #map { margin: 0; height: 100%; width: 100%; }
 	</style>
