Change CensusRegistry to GentrificationModel.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="node_modules/lodash/lodash.js"></script>
 	<script src="node_modules/rbush/rbush.js"></script>
 	<script src="src/CensusTract.js"></script>
-	<script src="src/CensusRegistry.js"></script>
+	<script src="src/GentrificationModel.js"></script>
 	<style>
 		html, body, #map { margin: 0; height: 100%; width: 100%; }
 	</style>
